--- a/scripts/Crawford_abandonment_MS+SI.Rmd
+++ b/scripts/Crawford_abandonment_MS+SI.Rmd
@@ -25,7 +25,7 @@ editor_options:
   chunk_output_type: console
 bibliography: [/Users/christophercrawford/Google_Drive/Library/library.bib, packages.bib]
 link-citations: yes
-csl: nature.csl
+csl: science-advances.csl
 urlcolor: blue
 linkcolor: black
 citecolor: black
@@ -36,13 +36,13 @@ source("/Users/christophercrawford/Google_Drive/_Projects/abandonment_trajectori
 ```
 
 ```{r preview-chapter, eval=FALSE, include = FALSE}
-rmarkdown::render("scripts/abn_trajectories_ms.Rmd",
+rmarkdown::render("scripts/Crawford_abandonment_MS+SI.Rmd",
                   output_file = 
                     paste0(p_proj, "writing/previews/", "abn_duration_draft",
                            format(Sys.Date(), ("_%Y_%m_%d")), ".docx"))
 
 # Save final PDF with SI for submission:
-rmarkdown::render("scripts/abn_trajectories_ms.Rmd",
+rmarkdown::render("scripts/Crawford_abandonment_MS+SI.Rmd",
                   output_file = paste0(p_proj, "writing/", "Crawford_abandonment_MS+SI.pdf"),
                   output_format = "bookdown::pdf_document2")
 
@@ -92,7 +92,9 @@ knitr::write_bib(x = c(needed_packages, github_packages), file = 'packages.bib')
 # packageDescription(needed_packages[1])
 # 
 # tinytex::tlmgr_install(
-#   pkgs = "ragged2e"
+#   # pkgs = "ragged2e"
+#   # pkgs = "standalone"
+#   pkgs = "preview"
 # )
 ```
 
@@ -129,7 +131,7 @@ area_recult_threshold <- read_csv(file = paste0(p_derived2, "area_recult_thresho
 
 
 # load stats on proportion of abandoned cropland by land cover
-abn_lc_count_2017 <- read_csv(file = paste0(p_derived2, "abn_lc_count_2017", run_label, ".csv"))
+abn_lc_area_2017 <- read_csv(file = paste0(p_derived2, "abn_lc_area_2017", run_label, ".csv"))
 abn_prop_lc_2017 <- read_csv(file = paste0(p_derived2, "abn_prop_lc_2017", run_label, ".csv"))
 
 
@@ -345,6 +347,10 @@ Unless policymakers take steps to reduce recultivation or provide incentives for
 
 <!-- Agriculture, cropland abandonment, agricultural abandonment, farmland abandonment, rural land abandonment, biodiversity conservation, secondary succession, carbon sequestration, land-cover mapping -->
 
+# Teaser
+
+
+
 # Introduction {.unnumbered}
 
 Human populations are in flux around the world, as people seek new economic opportunities in cities and flee changing environments and conflicts [@Sanderson2018].
@@ -484,7 +490,7 @@ area_abn_stats <- list(
 # area_ever_abn_as_prop_crop87
 
 # ---------------------------------------------------------------------- #
-area_recult_threshold %>% filter(abn_threshold == 10) %>% select(site, proportion_recultivated) %>% arrange(proportion_recultivated)
+
 
 # recultivation statistics
 recult_stats <- list(
@@ -523,25 +529,25 @@ abn_duration_stats # see "get-summary-stats"
 # land cover stats --------------------- #
 lc_stats <- list(
   forest_min = abn_prop_lc_2017 %>% 
-    filter(lc_2017 == 2) %>% slice_min(prop_lc) %>% 
-    select(prop_lc) %>% round(digits = 2) * 100,
+    filter(lc_2017 == 2) %>% slice_min(prop_lc_area_ha) %>% 
+    select(prop_lc_area_ha) %>% round(digits = 2) * 100,
   
   forest_min_grassland = (1 - abn_prop_lc_2017 %>% 
-                     filter(lc_2017 == 2) %>% slice_min(prop_lc) %>% 
-                     select(prop_lc) %>% round(digits = 2)) * 100,
+                     filter(lc_2017 == 2) %>% slice_min(prop_lc_area_ha) %>% 
+                     select(prop_lc_area_ha) %>% round(digits = 2)) * 100,
   
   forest_min_site = abn_prop_lc_2017 %>% 
-    filter(lc_2017 == 2) %>% slice_min(prop_lc) %>% .$site %>% capwords(),
+    filter(lc_2017 == 2) %>% slice_min(prop_lc_area_ha) %>% .$site %>% capwords(),
   
   forest_max = abn_prop_lc_2017 %>% 
-    filter(lc_2017 == 2) %>% slice_max(prop_lc) %>% 
-    select(prop_lc) %>% round(digits = 2) * 100,
+    filter(lc_2017 == 2) %>% slice_max(prop_lc_area_ha) %>% 
+    select(prop_lc_area_ha) %>% round(digits = 2) * 100,
   
   forest_max_grassland = (1 - abn_prop_lc_2017 %>% 
-                         filter(lc_2017 == 2) %>% slice_max(prop_lc) %>% 
-                         select(prop_lc) %>% round(digits = 2)) * 100,
+                         filter(lc_2017 == 2) %>% slice_max(prop_lc_area_ha) %>% 
+                         select(prop_lc_area_ha) %>% round(digits = 2)) * 100,
   
-  forest_max_site = abn_prop_lc_2017 %>% filter(lc_2017 == 2) %>% slice_max(prop_lc) %>% .$site %>% capwords()
+  forest_max_site = abn_prop_lc_2017 %>% filter(lc_2017 == 2) %>% slice_max(prop_lc_area_ha) %>% .$site %>% capwords()
   )
 
 # ---------------------------------------------------------------------- #
@@ -670,7 +676,7 @@ Abandonment duration also varied substantially within sites, with individual sit
 # knitr::include_graphics(path = paste0(p_plots, run_label, "/mean_lengths", run_label, ".pdf")) 
 
 # new version, flipped, with histograms
-knitr::include_graphics(path = paste0(p_plots, "fig2_right.pdf"))
+knitr::include_graphics(path = paste0(p_plots, "fig2.pdf"))
 ```
 
 ## Modeling abandonment decay & recultivation {.unnumbered}
@@ -856,7 +862,8 @@ While natural regeneration is typically cheaper and sometimes more successful th
 Grassland regeneration is particularly challenging, because many grasslands require natural disturbance regimes (e.g., grazing or fire), which may be absent following abandonment [@Nerlekar2020].
 Without such disturbances, grassland biodiversity can be lost if low-intensity farmlands are abandoned, particularly in historically unforested ecosystems [@ReyBenayas2007; @Nerlekar2020; @Queiroz2014; @Sirami2008].
 
-# Conclusions {.unnumbered}
+<!-- # Conclusions {.unnumbered} -->
+## Policy implications {.unnumbered}
 
 We found strong evidence that abandoned croplands did not remain uncultivated for long periods of time at eleven sites across the globe.
 Without new policies and incentives to discourage recultivation, abandoned areas are unlikely to provide meaningful biodiversity and carbon benefits.
@@ -890,7 +897,7 @@ Thus, while our results are likely representative of those areas that have recen
 
 Differentiating abandonment from short-term fallowing or crop rotations is difficult because agricultural practices can vary widely by region, and studies use many different definitions [@Yin2020].
 Here, in order to exclude short-term fallowing, we define "abandonment" as cropland that is no longer under active cultivation, is left free of direct human influence (e.g., is not converted to urban land use), and remains so for at least five subsequent years, following FAO [@FAO2016].
-Recognizing that longer abandonment thresholds may be more appropriate in certain contexts, we performed a sensitivity analysis by varying our abandonment definition (Section \@ref(abn-thresholds)) and found that, as expected, longer definitions resulted in less abandonment over all, longer average abandonment durations (Figure \@ref(fig:abn-thresholds-mean-duration)), and lower recultivation rates (Figure \@ref(fig:recult-by-threshold)).
+Recognizing that longer abandonment thresholds may be more appropriate in certain contexts, we performed a sensitivity analysis by varying our abandonment definition (Section \@ref(abn-thresholds)) and found that, as expected, longer definitions resulted in less abandonment overall, longer average abandonment durations (Figure \@ref(fig:abn-thresholds-mean-duration)), and lower recultivation rates (Figure \@ref(fig:recult-by-threshold)).
 However, even when only considering abandonment $\geq10$ years, we still observed between `r recult_stats$min_10`% and `r recult_stats$max_10`% recultivation across our sites (in `r recult_stats$min_10_site`/Shanxi and `r recult_stats$max_10_site` respectively), suggesting the reliability of our abandonment definition.
 
 ## Data processing {.unnumbered}
@@ -1118,7 +1125,7 @@ Table \@ref(tab:twoyr-diff-table) shows the area of abandoned croplands as ident
 These two methods produced abandonment area estimates that ranged between `r abs(abn_2yr_stats$low_percent)`% lower (`r abn_2yr_stats$low_p_site`) and `r abn_2yr_stats$high_percent`% higher (`r abn_2yr_stats$high_p_site`) than the abandoned area identified using the full time series.
 
 Not only do these methods produce different area estimates, but they also differ in the location of the abandonment they identify, with spatial agreement of only `r abn_2yr_stats$jaccard_low`% (`r abn_2yr_stats$jaccard_low_site`) to `r abn_2yr_stats$jaccard_high`% (`r abn_2yr_stats$jaccard_high_site`) (see Table \@ref(tab:twoyr-diff-table)).
-We measure spatial agreement using the Jaccard similarity index [Legendre2012], a measure of overlap between two sets, defined as the proportion of shared elements, or the intersection divided by the union (Equation \@ref(eq:jaccard-equation)) [@Legendre2012]:
+We measure spatial agreement using the Jaccard similarity index [@Legendre2012], a measure of overlap between two sets, defined as the proportion of shared elements, or the intersection divided by the union (Equation \@ref(eq:jaccard-equation)) [@Legendre2012]:
 
 \begin{equation}
 J(a,b) = \frac{a\cap b}{a\cup b} (\#eq:jaccard-equation)
@@ -1277,7 +1284,24 @@ knitr::kable(summary_stats_table_df,
   kableExtra::kable_styling(
     # latex_options = "scale_down"
     latex_options = "hold_position"
-    )
+    ) #%>%
+#   readr::write_file(., "kable_out.pdf")
+# 
+#   kableExtra::save_kable(#width = 5, height = 2,
+#            file = paste0(p_plots, "my_table.html"),
+#            keep_tex = TRUE
+#              #paste0(p_plots, run_label, "/", "table_s1.pdf")
+#                  )
+# 
+# tinytex::tlmgr_install(
+#   # pkgs = "ragged2e"
+#   # pkgs = "standalone"
+#   pkgs = "fontspec"#"polyglossia"#"preview"
+# )
+
+
+
+
 ```
 
 ```{r twoyr-diff-table, echo = FALSE}
@@ -1348,7 +1372,7 @@ knitr::include_graphics(path = paste0(p_plots, run_label, "/turnover_grid", run_
 # knitr::include_graphics(path = paste0(p_plots, run_label, "/mean_lengths", run_label, ".pdf")) 
 
 # new version, flipped, with histograms
-knitr::include_graphics(path = paste0(p_plots, "fig2_w_max_right.pdf"))
+knitr::include_graphics(path = paste0(p_plots, "fig2_w_max.pdf"))
 ```
 
 (ref:caption-maps-max-abn-duration) Maximum duration of cropland abandonment (in years) observed at each pixel between 1987 and 2017 in our eleven study sites. This serves as a companion to maps of the abandonment duration as of 2017 shown in Figure 1. Site locations are shown in Figure \@ref(fig:global-map).
@@ -1491,36 +1515,7 @@ knitr::include_graphics(path = paste0(p_plots, run_label, "/decay/", "extrapolat
 (ref:caption-mean-duration-2050) Comparing the mean duration of abandonment at our 11 sites observed between 1987 and 2017 with the extrapolated mean duration as of 2050 for our two extrapolations.
 
 ```{r mean-duration-2050, fig.cap = '(ref:caption-mean-duration-2050)', echo=FALSE}
-# assumption 1 - constant initial area abandoned
-
-mean_age_in_2050 <- mean_length_df %>% filter(abn_threshold == 5, length_type == "all") %>%
-  select(site, mean_age_obs = mean_duration) %>%
-  left_join(., extrapolate_df_l3 %>% filter(year == 2050) %>% select(site, mean_age_extrap1 = mean_age), by = "site") %>%
-  left_join(., extrapolate_df_l3_a2 %>% filter(year == 2050) %>% select(site, mean_age_extrap2 = mean_age), by = "site") %>%
-  arrange(mean_age_obs)
-   
-mean_age_in_2050 %>%
-  pivot_longer(cols = c(2:4), names_to = "variable") %>%
-  ggplot(data = ., mapping = aes(x = fct_reorder(site, value), y = value, fill = variable)) + 
-  labs(x = NULL, #"Site", 
-       y = "Mean abandonment duration (years)") +
-  geom_col(position = position_dodge()) + coord_flip() + 
-  scale_fill_discrete(name = "Mean duration type: ", 
-                      labels = c(mean_age_obs = "Observed (1987-2017)", 
-                                 mean_age_extrap1 = "Extrapolation 1 (2050)",
-                                 mean_age_extrap2 = "Extrapolation 2 (2050)")) +
-  scale_x_discrete(labels = c("belarus" = "Vitebsk, Belarus /\n Smolensk, Russia",
-                              "bosnia_herzegovina" = "Bosnia & Herzegovina",
-                              "chongqing" = "Chongqing, China",
-                              "goias" = "Goiás, Brazil",
-                              "iraq" = "Iraq",
-                              "mato_grosso" = "Mato Grosso, Brazil",
-                              "nebraska" = "Nebraska/Wyoming, USA",
-                              "orenburg" = "Orenburg, Russia /\n Uralsk, Kazakhstan",
-                              "shaanxi" = "Shaanxi/Shanxi, China",
-                              "volgograd" = "Volgograd, Russia",
-                              "wisconsin" = "Wisconsin, USA")) +
-  theme_classic()
+knitr::include_graphics(path = paste0(p_plots, run_label, "/mean_age_in_2050", run_label, ".pdf"))
 ```
 
 (ref:caption-panel-b) Abandonment patterns for `r site_df$description[1]`, showing a) accumulation of abandoned land by age class, b) decay of abandoned land by year abandoned, c) the area in each land cover class through time (including both land that has been abandoned for five or more years, as well as any land abandoned for 1 or more years, therefore including short-term fallows), d) the annual turnover of abandoned land through time, and e) the distribution of abandonment duration for all periods of cropland abandonment (top) and the maximum duration of abandonment at each pixel (bottom).
